# SZ3

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: CompressionMPIManager.h  CompressionThreadManager.h  DebugStream.hpp  SZ.hpp  qcat_dataAnalysis.h  split_common.h  sz3_collect.h  sz3_split.h
include/SZ3/utils/: Config.hpp
include/compressor/: SZ_General_Compressor.hpp
include/predictor/: ComposedPredictor.hpp  LorenzoPredictor.hpp  PolyRegressionPredictor.hpp  Predictor.hpp  RegressionPredictor.hpp
include/quantizer/: IntegerQuantizer.hpp
include/utils/: Config.hpp  Iterator.hpp
python-examples/: pycompress.py  sz3py_mpi.py  sz3pytest.ipynb
src/: CMakeLists.txt  qcat_dataAnalysis.cpp
test/: CMakeLists.txt  decompress_test.cpp  parallel_liu.cpp  sz_cmd.cpp  sz_compress_test.cpp  sz_demo.cpp  sz_property.cpp  sz_region.cpp  test_write.cpp
tools/bindings/: CMakeLists.txt  README.md  bindings.cpp  pyproject.toml
tools/bindings/sz3py/: __init__.py
tools/hdf5-sz3/: CMakeLists.txt  H5Z_SZ3.cpp  H5Z_SZ3.h  sz_functions.cpp
tools/sz3-collect/: CMakeLists.txt  sz3_collect.cpp
tools/sz3-split/: CMakeLists.txt  sz3_split.cpp
tools/zstd/: CMakeLists.txt
