[build-system]
requires= ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="sz3py"
version="0.1.0"
description="Python bindings for the sz3 C++ library"
authors=[{name="Yuanjian Liu", email="yuanjian@uchicago.edu"}]
dependencies = []
requires-python = ">=3.9"

[tool.setuptools]
packages = ["sz3py"]
include-package-data = true

[tool.setuptools.package-data]
sz3py=["*.so"]